# cmd/api/handler/user_handler.go
@@ -3,8 +3,8 @@ package handler
 import (
 	"context"
 	"github.com/bytedance2022/minimal_tiktok/cmd/api/rpc"
+	"github.com/bytedance2022/minimal_tiktok/grpc_gen/auth"
 	"github.com/bytedance2022/minimal_tiktok/grpc_gen/biz"
-	"github.com/bytedance2022/minimal_tiktok/grpc_gen/user"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
@@ -12,21 +12,21 @@ import (
 // Login godoc
 // @Summary      login
 // @Description  login
-// @Tags         user
+// @Tags         auth
 // @Accept       json
 // @Produce      json
 // @Param        username body string true "username"
 // @Param        password body string true "password"
-// @Success      200 {object} user.LoginResponse
-// @Failure      500 {object} user.LoginResponse
-// @Router       /user/login [post]
+// @Success      200 {object} auth.LoginResponse
+// @Failure      500 {object} auth.LoginResponse
+// @Router       /auth/login [post]
 func Login(c *gin.Context) {
-	var req user.LoginRequest
+	var req auth.LoginRequest
 	err := c.ShouldBind(&req)
 	if err != nil {
 		// todo
 	}
-	resp, err := rpc.UserClient.Login(context.Background(), &req)
+	resp, err := rpc.AuthClient.Login(context.Background(), &req)
 	if err != nil {
 		// todo
 	}
@@ -36,21 +36,21 @@ func Login(c *gin.Context) {
 // Register godoc
 // @Summary      register
 // @Description  register
-// @Tags         user
+// @Tags         auth
 // @Accept       json
 // @Produce      json
 // @Param        username body string true "username"
 // @Param        password body string true "password"
-// @Success      200 {object} user.RegisterResponse
-// @Failure      500 {object} user.RegisterResponse
-// @Router       /user/register [post]
+// @Success      200 {object} auth.RegisterResponse
+// @Failure      500 {object} auth.RegisterResponse
+// @Router       /auth/register [post]
 func Register(c *gin.Context) {
-	var req user.RegisterRequest
+	var req auth.RegisterRequest
 	err := c.ShouldBind(&req)
 	if err != nil {
 		// todo
 	}
-	resp, err := rpc.UserClient.Register(context.Background(), &req)
+	resp, err := rpc.AuthClient.Register(context.Background(), &req)
 	if err != nil {
 		// todo
 	}
@@ -58,16 +58,16 @@ func Register(c *gin.Context) {
 }
 
 // QueryInfo godoc
-// @Summary      get user info
-// @Description  get user info
-// @Tags         user
+// @Summary      get auth info
+// @Description  get auth info
+// @Tags         auth
 // @Accept       json
 // @Produce      json
 // @Param        user_id body int true "user_id"
 // @Param        token body string true "token"
 // @Success      200 {object} biz.QueryInfoResponse
 // @Failure      500 {object} biz.QueryInfoResponse
-// @Router       /user [get]
+// @Router       /auth [get]
 func QueryInfo(c *gin.Context) {
 	var req biz.QueryInfoRequest
 	err := c.ShouldBind(&req)
